--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Ethnology -- Europe'
 - !lcc 'GN'
+- GITenberg
 title: The Ethnology of Europe
 url: http://www.gutenberg.org/ebooks/43510
